# strava-to-obsidian

./: .env.example  .gitignore  README.md  REQUIREMENTS.md  pyproject.toml
src/strava_to_obsidian/: __init__.py  __main__.py  api.py  auth.py  cli.py  config.py  exporter.py  models.py
tests/: test_exporter.py
